--- a/src/pages/home/styles/Mobile.css
+++ b/src/pages/home/styles/Mobile.css
@@ -114,7 +114,7 @@
   background-repeat: no-repeat;
   box-shadow: 0px 0px 16px rgba(6, 80, 255, 0.35);
 
-  cursor: none;
+  cursor: default;
 }
 
 .Home .Section-1 .Content .Register-Button #regis-btn:hover {
